package br.com.luan.model;

public enum Fator {
    RECONHECIMENTO_FACIAL,
    LOCALIZACAO_INDOOR
}