package br.com.luan.model;

public enum SituacaoSolicitacao {
    PENDENTE,
    APROVADA,
    REJEITADA
}
